# finiteelements

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
src/: algorithms.py  auxilliary.py  basis_functions.py  basisfunctions2d.py  code2pdf.py  driver.py  driver_reference_triangle.py  driver_sparse.py  finiteelement.py  finiteelement2d.py  function.py  functionspace.py  mesh.py  parallel.py  quadrature.py  quadrature2d.py  test_linearbasis2d.py  test_linearfiniteelement.py  test_linearfiniteelement2d.py  test_polynomialbasis2d.py  test_polynomialfiniteelement.py  test_polynomialfiniteelement2d.py  test_quadrature.py  visualise.py
src/fem/: __init__.py  algorithms.py  algorithms_reference_triangle.py  assembly.py  auxilliary.py  error.py  finiteelement.py  function.py  functionspace.py  linearelement.py  mesh.py  polynomialelement.py  quadrature.py  utilities.py  utilitymeshes.py  vectorelement.py
src/finiteelement/: algorithms.py  function.py
tests/: fixtures.py  test_algorithms.py  test_assemble_lhs.py  test_assembly.py  test_functionspace.py  test_linearelement.py  test_linearfiniteelement.py  test_polynomialelement.py  test_polynomialfiniteelement.py  test_quadrature.py  test_vectorelement.py  test_vectorfinitelement.py
